--- a/app/src/main/res/layout/activity_primera_pantalla.xml
+++ b/app/src/main/res/layout/activity_primera_pantalla.xml
@@ -6,23 +6,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo">
 
-    <TextView
-        android:layout_width="282dp"
-        android:layout_height="58dp"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="236dp"
+        android:layout_height="242dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="casual"
-        android:text="@string/nombre"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textSize="36sp"
-        android:textStyle="bold"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="232dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.737" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logoFinal"
+        />
 
 </android.support.constraint.ConstraintLayout>
