--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2dac21</color>
-    <color name="colorPrimaryDark">#217b18</color>
+    <color name="colorPrimary">#da1f0e</color>
+    <color name="colorPrimaryDark">#da1f0e</color>
     <color name="colorAccent">#da1f0e</color>
 </resources>
